@@ -41,7 +41,11 @@ kotlin {
                 }
                 if (Os.isFamily(Os.FAMILY_MAC)) {
                     register<JavaExec>("jvmRun") {
-                        jvmArgs("-XstartOnFirstThread")
+                        jvmArgs(
+                            "-XstartOnFirstThread",
+                            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                            "--enable-native-access=ALL-UNNAMED"
+                        )
                         mainClass.set(mainClassName)
                         kotlin {
                             val mainCompile = targets["jvm"].compilations["main"]
